Attempt to fix z-index issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,7 @@ font-weight: 300;
 .slice {
   padding: 50px 0 75px 0;
   margin
+  z-index: 10;
 }
 
 .color1 {
@@ -463,7 +464,7 @@ header p {
 
 #about {
   position:relative;
-  z-index: 35;
+  z-index: 10;
 }
 
 #about h2 {
@@ -509,7 +510,7 @@ header p {
 
 #services {
   position:relative;
-  z-index: 35;
+  z-index: 10;
   background-color: #ffffff;
 }
 
@@ -525,7 +526,7 @@ header p {
   line-height: 695px;
   text-align: center;
   position:relative;
-  z-index: 35;
+  z-index: 10;
 }
 
 /* TOOLS
@@ -533,7 +534,7 @@ header p {
 
 #tools {
   position:relative;
-  z-index: 35;
+  z-index: 10;
 }
 
 .tool {
@@ -553,7 +554,7 @@ header p {
 
 #work {
   position:relative;
-  z-index: 35;
+  z-index: 10;
 }
 
 #work h3 {
@@ -617,7 +618,7 @@ header p {
   line-height: 750px;
   text-align: center;
   position:relative;
-  z-index: 35;
+  z-index: 10;
 }
 
 #contact .slice-title {
@@ -668,7 +669,7 @@ input[type=text]:focus, textarea:focus {
 #connect {
   padding-top: 75px;
   position:relative;
-  z-index: 35;
+  z-index: 10;
   background-color: #ffffff;
 }
 
